@@ -6,6 +6,10 @@ TODO:
 - bird and netsnmp don't build with more than one job
 
 Latest changes:
+- Update bftpd download site
+- Fix typo in toolchain/make/target/uclibc/uclibc.mk causing make to always use
+  the precompiled uClibc, the manual build never got fired.
+- Update Speedport W701V to firmware version 33.04.26
 - Improved menuconfig tool adopted from buildroot2:
   * Comprehensive online help
   * Options' help texts also show dependency information:
